# BasslineAnalyser

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build.yml
